static/css/style.css
/* ... */
.landing-page-content {
  z-index: 2;
  position: relative;
  top: 25%;
}

.landing-page-title {
  font-weight: 400;
  font-size: 5rem;
  line-height: 1.2;
  margin-bottom: 12px;
  text-shadow: 3px 2px #000000;
}

.landing-page-subtitle {
  font-style: italic;
  font-weight: 400;
  font-size: 2.4rem;
  line-height: 1.2;
  margin-bottom: 8px;
  text-shadow: 1px 2px #000000;
}

.enter-site-button {
  display: inline-block;
  text-decoration: none;
  padding: 8px 24px;
  background: #fa7e0a;
  color: #fffef7;
  border-radius: 5px;
  border: solid #fffef7 2px;
  margin-top: 10px;
  margin-bottom: 16px;
  font-weight: 500;
  font-size: 1.8rem;
}

.enter-site-button:hover {
  transform: scale(1.05);
  background: rgba(250, 126, 10, 0.6);
}

/* --------------- navbar --------------- */

nav {
  background: linear-gradient(240deg, #2b2bc4 0%, #09097a 100%);
}

nav ul a {
  font-size: 1.6rem;
}

nav ul li:hover {
  background-color: #09097a;
  transition: background-color 2s ease 0s;
}

.brand-logo {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  line-height: 82px;
}

.waves-effect.waves-custom .waves-ripple {
  background-color: #fa7e0a;
}

/* --------------- mobile sidenav --------------- */

.sidenav {
  background-color: #fffef7;
  display: flex !important;
  flex-direction: column !important;
}

.sidenav-logo-container {
  height: 100px;
  background: linear-gradient(240deg, #2b2bc4 0%, #09097a 100%);
  display: flex;
  align-items: center;
  justify-content: center;
}

.sidenav-logo {
  height: auto;
  width: 200px;
}

.sidenav li a {
  color: #09097a;
  font-size: 1.8rem;
  border-bottom: 2px solid #09097a;
  text-align: center;
}

.sidenav li > a:hover {
  color: #fffef7;
  background-color: #09097a;
}

/* --------------- home section --------------- */

#home {
  display: flex;
  flex-direction: column;
  scroll-margin-top: 56px;
}

.section-title {
  text-transform: uppercase;
  font-size: 4rem;
  font-weight: 500;
  margin: 20px 0px 10px 0px;
}

.welcome-container h2,
.dba-info-container h2 {
  font-size: 2.6rem;
  font-weight: 400;
  margin: 12px 0px 6px 0px;
}

.welcome-container p,
.dba-info-container p {
  font-size: 1.6rem;
  font-weight: 400;
}

/* --------------- band section --------------- */

#band {
  display: flex;
  flex-direction: column;
  scroll-margin-top: 56px;
}

#pontus-container,
#marcusr-container {
  display: flex;
  flex-direction: row;
}

#marcusw-container,
#christopher-container {
  display: flex;
  flex-direction: row;
}

.slider,
.artist-info-container {
  flex: 0 1 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.slider .slides li,
.artist-info-container {
  height: 400px;
  margin: 10px 0px;
}

.slider .slides li img {
  object-fit: cover;
  height: 100%;
  width: auto;
  background-size: none;
  background-position: none;
  border-radius: 50px;
  overflow: hidden;
}

.artist-info-container h2 {
  text-align: center;
  font-weight: 500;
  margin-left: 12px;
  margin-right: 12px;
}

.artist-info-container h3 {
  text-align: center;
  font-style: italic;
  margin-left: 24px;
  margin-right: 24px;
}

/* --------------- blog section --------------- */

#blog {
  display: flex;
  flex-direction: column;
  scroll-margin-top: 56px;
}

.double-blog-container {
  display: flex;
  flex-direction: row;
}

.single-blog-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  flex: 0 1 50%;
  background-color: rgba(231, 231, 224, 0.5);
  padding: 24px;
  margin: 8px;
}

.single-blog-container h2 {
  font-size: 3rem;
  font-weight: 600;
  margin: 0;
}

.single-blog-container h4 {
  font-size: 2rem;
  font-weight: 500;
  font-style: italic;
  margin-top: 10px;
}

.single-blog-container p {
  font-size: 1.8rem;
  font-weight: 400;
  margin-top: 12px;
}

.blog-btn {
  margin-top: 10px;
  width: 200px;
  color: #fffef7;
  background-color: #fa7e0a;
  font-size: 1.5rem;
  font-weight: 500;
}

.blog-btn:hover {
  background-color: #09097a;
  transform: scale(1.05);
}

.blog-btn:focus {
  background-color: #09097a;
}

/* --------------- tour section --------------- */

#tour {
  display: flex;
  flex-direction: column;
  scroll-margin-top: 56px;
}

.tour-container {
  background-color: rgba(231, 231, 224, 0.5);
  padding: 16px;
  margin: 30px 0px;
  height: 160px;
  border: 2px solid #fa7e0a;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

.tour-date {
  text-align: center;
  white-space: pre-line;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.tour-date h3 {
  font-weight: 600;
  font-size: 2.7rem;
}

.tour-venue {
  text-align: center;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.tour-venue h3 {
  font-weight: 500;
  font-size: 2.7rem;
}

.tour-location {
  text-align: center;
  white-space: pre-line;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.tour-location h3 {
  font-weight: 500;
  font-size: 2.7rem;
}

.rsvp-btn-container {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.rsvp-btn {
  width: 110px;
  color: #fffef7;
  background-color: #09097a;
  font-size: 1.5rem;
  font-weight: 500;
}

.rsvp-btn:hover {
  background-color: #fa7e0a;
  transform: scale(1.05);
}

.rsvp-btn:focus {
  background-color: #fa7e0a;
}

.tickets-btn-container {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.tickets-btn {
  width: 150px;
  color: #fffef7;
  background-color: #fa7e0a;
  font-size: 1.5rem;
  font-weight: 500;
}

.tickets-btn:hover {
  background-color: #09097a;
  transform: scale(1.05);
}

.tickets-btn:focus {
  background-color: #09097a;
}

/* --------------- parallax --------------- */

.parallax-container {
  height: 30vh;
  margin-top: 20px;
}
/* ... */

